[tool.poetry]
name = "kaggle-forecasting-sticker-sales"
version = "0.1.0"
description = ""
authors = ["HiIAmTzeKean <ngtzekean@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pandas = "^2.2.3"
jupyter = "^1.1.1"
kaggle = "^1.6.17"
tensorflow = "^2.18.0"
numpy = "1.26.0"
scikit-learn = "^1.6.0"
plotly = "^5.24.1"
matplotlib = "^3.10.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
